--- a/statistics.html
+++ b/statistics.html
@@ -129,7 +129,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.bridgew.edu/postings/18039'>Bridgewater State University Portal | Assistant Professor- Statistics, Department of Mathematics</a></h5> 
+<h5><a href='https://jobs.bridgew.edu/postings/18039'>Bridgewater State University Portal | Assistant Professor- Statistics, Department of Mathematics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -141,7 +141,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://statmodeling.stat.columbia.edu/2019/10/23/were-hiring-an-econ-postdoc/'>We?re hiring an econ postdoc! ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statmodeling.stat.columbia.edu/2019/10/23/were-hiring-an-econ-postdoc/'>We?re hiring an econ postdoc! ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -165,7 +165,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -183,11 +183,11 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n3KKhMw5'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n3KKhMw5'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
+<h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -215,7 +215,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invaiosciences/jobs/4490278002'>Job Application for Statistician at Invaio Sciences</a></h5> 
+<h5><a href='https://boards.greenhouse.io/invaiosciences/jobs/4490278002'>Job Application for Statistician at Invaio Sciences</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -329,7 +329,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oZOK6fwn&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=nFWN7MwM'> HHB Systems Careers - Statistician/Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oZOK6fwn&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=nFWN7MwM'> HHB Systems Careers - Statistician/Data Scientist</a></h5> 
 <p><span class="badge badge-light">Springfield, Virginia</span></p>
 <p>Posted on:: 2019-10-12</p>
 <hr/>
@@ -365,7 +365,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/penumbrainc/799dfb11-cece-45eb-85b2-396edd58ac00'>Penumbra - Statistics Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/penumbrainc/799dfb11-cece-45eb-85b2-396edd58ac00'>Penumbra - Statistics Project Manager</a></h5> 
 <p><span class="badge badge-light">Alameda, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -475,7 +475,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/66E4E00A3D'>TFS - Jobs: Senior Statistical Programmer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/66E4E00A3D'>TFS - Jobs: Senior Statistical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
